play-pit/Quality_Assurance/SonarQube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarqube-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sonarqube.kx-as-code.local
  rules:
  - host: sonarqube.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: sonarqube-sonarqube
           servicePort: 9000
